--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,19 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.9",
+    "@tanstack/react-query": "^5.80.7",
     "dotenv": "^16.5.0",
+    "motion": "^12.17.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router": "^7.6.2",
+    "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tanstack/eslint-plugin-query": "^5.78.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
